# generic-netlink-user-kernel-rust

./: .gitignore  LICENSE  README.md  build_and_run.sh
include/: exmpl-protocol-nl.h  gnl_foobar_xmpl.h  gnl_foobar_xmpl_prop.h
kernel-mod/: .gitignore  CMakeLists.txt  Makefile  build_and_insert_km.sh  generic-netlink-demo-km.c  gnl_foobar_xmpl-km.c  gnl_foobar_xmpl.c  hello-world-nl.c
kernel-mod/.cmake/: FindKernelHeaders.cmake
measurements/: strace_user_c_libnl.txt  strace_user_c_pure.txt  strace_user_rust.txt
user-c/: .gitignore  CMakeLists.txt  Makefile  install-pkgs.sh  user-libnl.c  user-pure.c  user.c
user-rust/: Cargo.toml
user-rust/src/: README.md  lib.rs  main.rs
